--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "My Express JS Application",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app"
+    "start": "nodemon server"
   },
   "author": "Jane Nguyen",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "mongoose": "^8.4.1"
   }
