--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express_js",
   "version": "1.0.0",
   "description": "My Express JS Application",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server"
   },
